--- a/main.html
+++ b/main.html
@@ -10,7 +10,24 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<img src="https://static.toiimg.com/photo/87064706.cms">
+<h1>Ram charan</h1>
+	<a herf="https://www.linkedin.com/in/rcharan">LinkedIn<\a>
+		<section id="skills">
+			skills:
+			<ol>
+				<li>Communication</li>
+				<li>Problem Solving</li>
+				<li>Analytical</li>
+			</ol>
+		</section>
+		<section id="projects">
+			Projects:
+			<ul>
+				<li>Designed profile section using html&css</li>
+				<li>pizza bill generator using Oops</li>
+			</ul>
+		</section>
 </body>
 
 </html>
