--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<img src="https://static.toiimg.com/photo/87064706.cms">
+	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/Ram_Charan_promoting_Zanjeer.jpg/278px-Ram_Charan_promoting_Zanjeer.jpg">
 <h1>Ram charan</h1>
 	<a herf="https://www.linkedin.com/in/rcharan">LinkedIn<\a>
 		<section id="skills">
