--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 </script>
 	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4b/Ram_Charan_promoting_Zanjeer.jpg/278px-Ram_Charan_promoting_Zanjeer.jpg">
 <h1>Ram charan</h1>
-	<a href="https://www.linkedin.com/in/rcharan">LinkedIn<\a>
+<p>My Linkedin profile	<a href="https://www.linkedin.com/in/rcharan">Ramcharan</a> </p>
 		<section id="skills">
 			skills:
 			<ol>
